--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "react-app-rewired": "^2.2.1",
     "source-map-loader": "^5.0.0"
   },
-  "homepage": "https://github.com/saraamas/saraamas.github.io.git"
+  "homepage": "https://saraamas.github.io"
 }
