--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.1.1",
+    "jest": "^27.5.1",
     "react-app-rewired": "^2.2.1",
     "source-map-loader": "^5.0.0"
   },
